[package]
name = "psylle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
rdev = { version = "0.5.2", features = ["unstable_grab", "serialize"]}


tokio = {version = "1.28.2", features = ["net", "rt", "macros", "rt-multi-thread"]}
tokio-util = {version = "0.7.8", features = ["codec", "net"]}
tokio-stream = "0.1.14"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
postcard = {version = "1.0.4", features = ["alloc"]}
bytes = "1.4.0"